--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/src/index.html" },
-    { "source": "/index", "destination": "/src/index.html" },
-    { "source": "/about", "destination": "/src/about.html" },
-    { "source": "/contact", "destination": "/src/contact.html" }
+    { "source": "/index.html", "destination": "/src/index.html" },
+    { "source": "/about.html", "destination": "/src/about.html" },
+    { "source": "/contact.html", "destination": "/src/contact.html" }
   ]
 }
