--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
     { "source": "/", "destination": "/src/index.html" },
     { "source": "/index.html", "destination": "/src/index.html" },
     { "source": "/about.html", "destination": "/src/about.html" },
-    { "source": "/contact.html", "destination": "/src/contact.html" }
+    { "source": "/contact.html", "destination": "/src/contact.html" },
+    { "source": "/output.css", "destination": "/src/output.css" }
   ]
 }
